tests/invalid_inputs/sema/class_member_name_collision.cpp
// this passes right now because the name is mangled in the symbol table

struct S {
	int a;
	void a() {}
}
